; ModuleID = '/home/carl/AnghaBench/ccv/lib/extr_ccv_convnet.c__ccv_convnet_layer_forward_propagate.c'
source_filename = "/home/carl/AnghaBench/ccv/lib/extr_ccv_convnet.c__ccv_convnet_layer_forward_propagate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*, i32*, i32**, i32**)* @_ccv_convnet_layer_forward_propagate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_ccv_convnet_layer_forward_propagate(%struct.TYPE_8__* %0, i32* %1, i32** %2, i32** %3) #0 {
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32**, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32** %2, i32*** %7, align 8
  store i32** %3, i32*** %8, align 8
  %9 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  switch i32 %11, label %38 [
    i32 131, label %12
    i32 130, label %17
    i32 129, label %22
    i32 128, label %28
    i32 132, label %33
  ]

12:                                               ; preds = %4
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = load i32**, i32*** %7, align 8
  %16 = call i32 @_ccv_convnet_convolutional_forward_propagate(%struct.TYPE_8__* %13, i32* %14, i32** %15)
  br label %38

17:                                               ; preds = %4
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = load i32**, i32*** %7, align 8
  %21 = call i32 @_ccv_convnet_full_connect_forward_propagate(%struct.TYPE_8__* %18, i32* %19, i32** %20)
  br label %38

22:                                               ; preds = %4
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = load i32**, i32*** %7, align 8
  %26 = load i32**, i32*** %8, align 8
  %27 = call i32 @_ccv_convnet_rnorm_forward_propagate(%struct.TYPE_8__* %23, i32* %24, i32** %25, i32** %26)
  br label %38

28:                                               ; preds = %4
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = load i32**, i32*** %7, align 8
  %32 = call i32 @_ccv_convnet_max_pool_forward_propagate(%struct.TYPE_8__* %29, i32* %30, i32** %31)
  br label %38

33:                                               ; preds = %4
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %35 = load i32*, i32** %6, align 8
  %36 = load i32**, i32*** %7, align 8
  %37 = call i32 @_ccv_convnet_average_pool_forward_propagate(%struct.TYPE_8__* %34, i32* %35, i32** %36)
  br label %38

38:                                               ; preds = %4, %33, %28, %22, %17, %12
  ret void
}

declare dso_local i32 @_ccv_convnet_convolutional_forward_propagate(%struct.TYPE_8__*, i32*, i32**) #1

declare dso_local i32 @_ccv_convnet_full_connect_forward_propagate(%struct.TYPE_8__*, i32*, i32**) #1

declare dso_local i32 @_ccv_convnet_rnorm_forward_propagate(%struct.TYPE_8__*, i32*, i32**, i32**) #1

declare dso_local i32 @_ccv_convnet_max_pool_forward_propagate(%struct.TYPE_8__*, i32*, i32**) #1

declare dso_local i32 @_ccv_convnet_average_pool_forward_propagate(%struct.TYPE_8__*, i32*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
